bugfix for overflowing sidebar and navigation

--- a/src/components/Aside/components/Aside.module.scss
+++ b/src/components/Aside/components/Aside.module.scss
@@ -4,7 +4,7 @@
   gap: var(--spacing-md);
   padding: var(--spacing-md);
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   color: var(--color-dark);
   font-size: var(--font-size-xs);
   text-align: center;
