--- a/src/features/navigation/components/Navigation/Navigation.module.scss
+++ b/src/features/navigation/components/Navigation/Navigation.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: var(--color-lighter);
 
   @media only screen and (min-width: $breakpoint-lg) {
