--- a/src/layout/Aside/Aside.module.scss
+++ b/src/layout/Aside/Aside.module.scss
@@ -1,4 +1,5 @@
 .container {
   grid-row: start-aside/end-aside;
   grid-column: start-aside/end-aside;
+  overflow: auto;
 }
